<resources>
    <string name="app_name">Kien Messenger</string>
    <string name="facebook_app_id">178504229263127</string>
    <string name="login_id">Tên đăng nhập...</string>
    <string name="login_pass">Mật khẩu...</string>
    <string name="btn_agree">Đăng nhập</string>
    <string name="btn_register">Đăng ký</string>
    <string name="chk_save">Lưu thông tin đăng nhập</string>
    <string name="btn_thoat">Thoát</string>
    <string name="title_activity_maps">Map</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="filter">Lọc</string>
    <string name="sort">Sắp xếp</string>
    <string name="facebook">Facebook</string>
    <string name="gmail">Google</string>
    <string name="need_all">Cần điền tất cả các mục</string>
    <string name="pass_6letter_cap">Mật khẩu phải bao gồm ít nhất 6 ký tự và 1 chữ hoa</string>
    <string name="i_want">Tôi muốn nhận các thông báo của chat app</string>
    <string name="i_understand">Tôi đã đọc và hiểu rõ các điều khoản bảo mật của Kien Messenger</string>
    <string name="full_name">Tên đăng nhập...</string>
    <string name="errorName">Bạn chưa nhập mục này</string>
    <string name="errorEmail">Không có dạng email này</string>
    <string name="errorMK">Mật khẩu phải gồm ít nhất 6 kí tự và 1 chữ in hoa</string>
    <string name="errorNLMK">Mật khẩu nhập lại không khớp</string>
    <string name="registerSuccess">Đăng ký tài khoản thành công!</string>
    <string name="registerFail">Đăng ký thất bại!</string>
    <string name="login_Fail">Tên đăng nhập hoặc mật khẩu không đúng!</string>
    <string name="hintemail">Địa chỉ email...</string>
    <string name="hintpassword">Mật khẩu...</string>
    <string name="hint_repeat_pass">Nhập lại mật khẩu...</string>
    <string name="forgotPass">Quên tài khoản?</string>
    <string name="btnLogin">Đăng nhập</string>
    <string name="btnRegister">Đăng ký</string>
    <string name="orLoginWith">Hoặc đăng nhập bằng</string>
    <string name="orRegisterWith">Hoặc đăng ký bằng</string>
    <string name="bam_vao_xem_chi_tiet"><u>Bấm vào để xem thông tin</u></string>
</resources>
