<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".View.DangNhap_DangKy.DangNhapMessenger">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/khung"
        android:scaleType="centerCrop"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll_parent_login"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_edtEmailLogin"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
            <dhbkhn.kien.kienmessenger.CustomView.ClearEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtEmailLogin"
                android:textColor="@color/colorToolbar"
                android:hint="Email đăng nhập..."
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/input_edtIdDangNhap"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            >
            <dhbkhn.kien.kienmessenger.CustomView.ClearEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtIdDangNhap"
                android:textColor="@color/colorToolbar"
                android:hint="@string/login_id"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/intpu_edtPassDangNhap"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            >
            <dhbkhn.kien.kienmessenger.CustomView.PasswordEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edtPassDangNhap"
                android:textColor="@color/colorToolbar"
                android:hint="@string/login_pass"
                app:useNope="true"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chkSave"
            android:text="@string/chk_save"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:textColor="@color/colorToolbar"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/btn_agree"
                    android:id="@+id/btnAgreeLogin"
                    android:background="@drawable/button_1"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="10dp"
                    android:textColor="#ffff"
                    />
                <Button
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/btnRegister"
                    android:text="@string/btn_register"
                    android:paddingRight="10dp"
                    android:background="@drawable/button_1"
                    android:paddingLeft="10dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginLeft="5dp"
                    android:textColor="#ffff"
                    />
                <Button
                    android:layout_weight="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/btnClose"
                    android:background="@drawable/button_1"
                    android:textColor="#ffff"
                    android:text="@string/btn_thoat"
                    android:layout_marginRight="10dp"
                    android:layout_marginLeft="5dp"
                    />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hoặc đăng nhập bằng"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:textSize="16sp"
                android:textColor="@color/colorToolbar"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <Button
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/facebookiconsmall"
                    android:text="@string/facebook"
                    android:background="@drawable/vien_facebook"
                    android:textColor="@color/facebook"
                    android:layout_margin="10dp"
                    android:id="@+id/btnDangNhapFacebook"
                    />
                <Button
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/googleplussmall"
                    android:text="@string/gmail"
                    android:background="@drawable/vien_gmail"
                    android:id="@+id/btnDangNhapGoogle"
                    android:textColor="@color/gmail"
                    android:layout_margin="10dp"
                    />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
